# image_compress

./: CMakeLists.txt  LICENSE  README.md  README_zh.md
.github/workflows/: camke-build.yml  cmake-multi-platform.yml
include/image_compress/: bmp_compressor.h  compress_params.h  i_image_compressor.h  image_compress.h  image_compress_version.h  image_converter.h  image_types.h  jpeg_compressor.h  png_compressor.h
src/: bmp_compressor.cpp  image_converter.cpp  jpeg_compressor.cpp  png_compressor.cpp
tests/: main.cpp  test_image.cpp
